syntax = "proto3";

option go_package = "src/controller/NetLockerController";

package NetLocker;

message NetLockRequest {
    string Key = 1;
    int64 TimeLock = 2;
    optional string UniqueId = 3;
}

message NetUnlockRequest {
    string Key = 1;
    optional string UniqueId = 3;
}

message NetLockerResponse {
    bool Success = 1;
}

service NetLockerService {
    rpc TryAndLock(NetLockRequest) returns (NetLockerResponse);
    rpc Unlock(NetUnlockRequest) returns (NetLockerResponse);
}